--- a/internal/dashboard/templates/cockpit.html
+++ b/internal/dashboard/templates/cockpit.html
@@ -44,7 +44,7 @@
   <thead>
     <tr>
       <th>ID</th>
-      <th>Requested By</th>
+      <th>Agent</th>
       <th>Run</th>
       <th>Age</th>
       <th>Actions</th>
